package sokoban.juego.funcionalidadDelJuego;

public class PuntuaciónMenorACeroException extends Exception {
    public PuntuaciónMenorACeroException() {
        super();
    }
}
